--- a/week1/mission/styles.css
+++ b/week1/mission/styles.css
@@ -1,44 +1,45 @@
 .content {
-    font-family: 'Times New Roman', Times, serif;
-    line-height: 1.5;
-    max-width: 600px;
-    margin: 50px auto;
-    padding: 5% 10%;
-    border: solid 1px lightgray;
+  font-family: "Times New Roman", Times, serif;
+  line-height: 1.5;
+  max-width: 600px;
+  margin: 50px auto;
+  padding: 5% 10%;
+  border: solid 1px lightgray;
 }
 
 main {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 p {
-    font-size: 20px;
+  font-size: 20px;
 }
 
-p:first-child{
-    padding: 2rem 0 0;
+p:first-child {
+  padding: 2rem 0 0;
 }
 
 h2 {
-    color: #006EB6;
-    font-size: smaller;
+  color: #006eb6;
+  font-size: smaller;
 }
 
-h1, h2 {
-    letter-spacing: .2rem;
-    text-align: center;
+h1,
+h2 {
+  letter-spacing: 0.2rem;
+  text-align: center;
 }
 
 li {
-    padding: .5rem;
+  padding: 0.5rem;
 }
 
 footer {
-    margin: 3rem auto 1rem;
+  margin: 3rem auto 1rem;
 }
 
 .logo {
-    display: block;
-    width: 150px;
-    margin: 0 auto;
+  display: block;
+  width: 150px;
+  margin: 0 auto;
 }
