--- a/week1/mission/styles.css
+++ b/week1/mission/styles.css
@@ -43,3 +43,12 @@ footer {
   width: 150px;
   margin: 0 auto;
 }
+
+/* dark theme */
+.dark {
+  background-color: #333;
+  color: white;
+}
+.dark h2 {
+  color: #A0D4ED;
+}
