--- a/week3/coolpics/coolpics.css
+++ b/week3/coolpics/coolpics.css
@@ -27,11 +27,17 @@ h1, nav {
 
 nav {
     max-width: 40%;
+    text-align: center;
+}
+
+.hide {
+    display: none;
 }
 
 nav a{
     color:#EBEBEB;
-    padding: 4rem;
+    display: grid;
+    grid-template-columns: 1fr;
     text-align: center;
     line-height: 2rem;
     margin: 0 auto;
@@ -81,6 +87,32 @@ img {
     box-shadow: 2px 2px 2px 2px grey;
 }
 
+.viewer {
+    display: grid;
+    grid-template-rows: 5% 90% 5%;
+    grid-template-columns: 95% 5%;
+    position: fixed;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+.close-viewer {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.viewer img {
+    margin: 0 auto 5%;
+    max-width: 95%;
+    box-shadow: none;
+    grid-column: 1 / 3;
+    grid-row: 2;
+    max-height: 100%;
+}
+
 @media screen and (min-width: 700px){
 
     .gallery {
@@ -90,12 +122,24 @@ img {
 }
 
 @media screen and (min-width: 1000px) {
-    button {
+    .viewer {
+        top:5%;
+        left:5%;
+        bottom:5%;
+        right:5%;
+    }
+
+    .menu-button {
         display: none;
     }
 
     nav {
         max-width: 100%;
+    }
+
+    nav a {
+        display: inline;
+        padding: 0 4rem;
     }
 
     .gallery {
