--- a/week5/blog/blog.css
+++ b/week5/blog/blog.css
@@ -56,6 +56,8 @@ nav {
 }
 #filter-pannel {
     border: 1px solid var(--Gold-color);
+    grid-row: 1/3;
+    grid-column: 2/3;
 }
 .main-book-info {
     padding: 0 1rem 1rem;
@@ -94,8 +96,12 @@ a {
 li {
     list-style-type: none ;
 }
-#book-image {
+.book-image {
     margin: 0 auto;
     justify-items: center;
-    width: fit-content;
+    width: 60%;
+    object-fit: cover;
+}
+.book-image img {
+    max-width: 100%;
 }
