--- a/week8/register/register.css
+++ b/week8/register/register.css
@@ -36,6 +36,14 @@ form {
 fieldset {
     margin-bottom: 2em;
 }
+.participants {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10px;
+}
+#add {
+    grid-column: 1/3;
+}
 input,
 select,
 textarea {
