--- a/LazyList/styles/style.css
+++ b/LazyList/styles/style.css
@@ -20,22 +20,82 @@
   --nav-hover-link-color: var(--accent2-color);
   --nav-hover-background-color: var(--primary-color);
 }
+/* Navigation */
+nav {
+    background-color: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100px;
+}
+nav a {
+    text-decoration: none;
+    color: var(--paragraph-color-on-color);
+}
 /* Main stuff */
 body {
     font-family: var(--paragraph-font);
-    font-size: 16px;
+    font-size: 1.25em;
     color: var(--paragraph-color-on-white);
     line-height: 22px;
+    margin: 0 auto;
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+#searchDiv {
+    height: 2rem;
+    width: 80%;
+    margin: 40px auto 0px;
+    display: flex;
+    align-items: center;
+    border: 0.4px black solid;
+    border-radius: 5px;
+}
+#searchDiv input {
+    height: 20px;   
+    width: 100%;
+    padding: 5px;
+    border: none;
+    cursor: text;
+    border-radius: 5px;
+}
+#searchDiv button {
+    height: 31px;
+    border: none;
+    border-left: 1px solid black;
+    background-color: var(--accent1-color);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+#replaceable {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    max-width: 900px;
+    margin: 60px auto;
+}
+#replaceable img {
+    max-width: 500px;
+    width: 40%;
+}
+#replaceable p {
+    display: inline;
+    max-width: 40%;
+    height: fit-content;
+    margin: auto 0;
 }
 /* Footer */
 footer{
-    background-color: #1C121F;
+    background-color: var(--primary-color);
     padding: 25px 50px;
 }
 footer img {
     max-width: 90%;
     margin: 0 auto;
     display: flex;
+    max-width: 500px;
 }
   
 #copyright{
@@ -49,160 +109,88 @@ footer img {
     letter-spacing: .3rem;
 }
 /* Form page */
+.busy {
+    margin: 40px auto;
+    max-width: 500px;
+    text-align: center;
+}
+form h1 {
+    margin: 10px auto 30px;
+    width: fit-content;
+}
 * {
     box-sizing: border-box;
-  }
+}
 div,
 form,
 input,
 select,
-label,
-p {
+label {
     padding: 0;
     margin: 0;
     outline: none;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 1.5rem;
+    line-height: 2rem;
     color: var(--paragraph-color-on-color);
 }
 #form-space {
     padding: 20px;
     max-width: 960px;
-    margin: 0 auto;
+    margin: 0 auto 50px;
 }
 form {
     padding: 20px;
     border-radius: 6px;
-    background: var(--paragraph-background-color);
-    box-shadow: 0 0 8px #006622;
+    background-image: url('../images/beach-background.avif');
 }
 fieldset {
     margin-bottom: 2em;
-}
-.participants {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 10px;
-}
-#add {
-    grid-column: 1/3;
+    border: 1px solid var(--primary-color);
 }
 input,
 select,
 textarea {
     margin-bottom: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--primary-color);
     border-radius: 3px;
+    color: var(--primary-color);
+    font-size: 1.25rem;
 }
 input {
     width: 100%;
     padding: 5px;
 }
-input[type="checkbox"] {
-    width: auto;
-    margin-right: 1em;
+.optional,
+.optional label {
+    color: var(--primary-color);
 }
-input[type="date"] {
-    padding: 4px 5px;
-}
-textarea {
-    width: 100%;
-    padding: 5px;
-}
-.item:hover p,
-.item:hover i,
-.question:hover p,
-.question label:hover,
-input:hover::placeholder {
-    color: #006622;
-}
-.item input:hover,
-.item select:hover,
-.item textarea:hover {
-    border: 1px solid transparent;
-    box-shadow: 0 0 3px 0 #006622;
-    color: #006622;
-}
-.item {
-    position: relative;
-    margin: 10px 0;
-}
-.item span {
-    color: red;
-}
- 
-
-.columns {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-.columns div {
-    width: 48%;
-}
-
-  /* Style checkbox and radio. To do this we have to hide the defaults then we create our own */
-input[type="radio"] {
-    display: none;
-}
-label.radio {
-    position: relative;
-    display: inline-block;
-    margin: 5px 20px 15px 0;
-    cursor: pointer;
-}
-.question span {
-    margin-left: 30px;
-}
-.question-answer label {
+.optional label,
+.optional input,
+.optional select {
     display: block;
 }
-label.radio:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 17px;
-    height: 17px;
-    border-radius: 50%;
-    border: 2px solid #ccc;
+.optional p,
+#cost {
+    display: inline;
+    max-width: 97%;
 }
-input[type="radio"]:checked + label:before,
-label.radio:hover:before {
-    border: 2px solid #006622;
-}
-label.radio:after {
-    content: "";
-    position: absolute;
-    top: 6px;
-    left: 5px;
-    width: 8px;
-    height: 4px;
-    border: 3px solid #006622;
-    border-top: none;
-    border-right: none;
-    transform: rotate(-45deg);
-    opacity: 0;
-}
-input[type="radio"]:checked + label:after {
-    opacity: 1;
-}
-  /* end style checkbox and radio */
 .btn-block {
     margin-top: 10px;
     text-align: center;
 }
-button {
-    width: 150px;
+.btn-block button {
+    width: 25%;
+    height: 6rem;
     padding: 10px;
-    border: none;
+    border: 1px solid var(--primary-color);
     border-radius: 5px;
-    background: #006622;
-    font-size: 16px;
-    color: #fff;
+    background: #eda246;
+    font-size: 2rem;
+    color: var(--primary-color);
     cursor: pointer;
 }
-button:hover {
-    background: #00b33c;
+.btn-block button:hover {
+    background: var(--accent2-color);
+    color: var(--primary-color);
 }
   
